--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!indexhtml>
-
 <html>
-
 <head>
-
 <metacharset="UTF-8">
-
-<metaname="viewport"content="width=device-width,initial-scale=1.0">
-
-<metahttp-equiv="X-UA-Compatible"content="ie=edge">
-
-<title>早上好啊！</title>
-
+<title>"早上好啊！"</title>
 </head>
-
 <body>
-
-<h1>早上好！！！！！</h1>
-
+<h1>"早上好！！！！！"</h1>
 </body>
-
 </html>
