--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <metacharset="UTF-8">
-<title>"早上好啊！"</title>
+<title>早上好</title>
 </head>
 <body>
-<h1>"早上好！！！！！"</h1>
+<h1>大家来打扑克</h1>
 </body>
 </html>
