--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>早上好</title>
 </head>
 <body>
-  <script type="fancs86/fancs86" src="0.jpg"></script>
+  <img src="0.jpg">
 <h1>大家来打扑克</h1>
   <p>床前明月光</p>
   <p>疑是地上霜</p>
