--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p>床前明月光</p>
   <p>疑是地上霜</p>
   <p>举头望明月</p>
-  <p>我的郭德纲</p>
-  <p>https://blog.csdn.net/xuheng8600/article/details/84798406</p>
+  <p>我是郭德纲</p>
+  <script>src="https://blog.csdn.net/xuheng8600/article/details/84798406"</script>
 </body>
 </html>
