--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <p>疑是地上霜</p>
   <p>举头望明月</p>
   <p>我是郭德纲</p>
-  <script>src="https://blog.csdn.net/xuheng8600/article/details/84798406"</script>
+  <script type="text/javascript" src=src="https://blog.csdn.net/xuheng8600/article/details/84798406"></script>
 </body>
 </html>
